<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pix"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tie_man" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/john_doe"
            android:textAlignment="textStart"
            android:textSize="@dimen/name_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/pix"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textAlignment="textStart"
            android:textSize="@dimen/record_text_size"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_value"
            android:textSize="@dimen/record_text_size"
            app:layout_constraintStart_toEndOf="@+id/age"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sex"
            android:textSize="@dimen/record_text_size"
            app:layout_constraintStart_toEndOf="@+id/age_value"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/sex_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_value"
            android:textSize="@dimen/record_text_size"
            app:layout_constraintStart_toEndOf="@+id/sex"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/bp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/bp"
            android:textSize="@dimen/record_text_size"
            app:layout_constraintStart_toEndOf="@+id/sex_value"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/bp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bp_value"
            android:textSize="@dimen/record_text_size"
            app:layout_constraintStart_toEndOf="@+id/bp"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>